pequenas modificações e atualização

--- a/servicos.html
+++ b/servicos.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Cuidamos da sua biblioteca como se fosse a nossa, organizamos, limpamos, catalogamos e muitos outros serviços, venha nos conhecer.">
-    <link rel="stylesheet" href="./styles/index.css">
+    <meta name="description" content="Serviços oferecidos pela RA, ">
+    <link rel="stylesheet" href="./styles/servicos.css">
     <!-- <script src="./scripts/header.js" defer></script> -->
-    <title>RA - Organização Documental (Página Inicial)</title>
+    <title>RA - Organização Documental (Serviços)</title>
 </head>
 
 <body>
-
-    <iframe src="header.html" name="index" loading="eager"></iframe>
+    <iframe src="header.html" name="servicos" loading="eager"></iframe>
 
     <main>
-        <h1>Página Inicial</h1>
+        <h1>Serviços</h1>
     </main>
 
     <footer>
